fix for priority drop down z-index

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1011,7 +1011,7 @@ div.priority-low {
 }
 .prod-filled .prod-thumb img {
 	width:60px;
-  height:60px;
+	height:60px;
 	border:solid 1px #ccc;
 }
 .prod-desc {
@@ -1048,6 +1048,7 @@ div.priority-low {
 	left:15px;
 	width:310px;
 	padding:6px;
+	z-index:2000;
 }
 .closed .note-content {
 	white-space: nowrap;
